Fix layout issues and add button in Jekyll

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,8 +10,16 @@
 }
 
 .popup-button {
-    padding: 100px;
-    background-color: rgb(67, 92, 203);
-    color: white;
-    border: 2px solid black;
+    padding: 5px 10px;
+    background-color: #d24040;
+    color: #FFFFFF !important;
+    border-radius: 5px;
+    text-decoration: none !important;
+    font-style: normal !important;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
+.popup-button:hover {
+    background-color: #a63a3a;
 }
